--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,13 @@ footer {
   margin-top: 2rem;
   padding: 1rem;
   background-color: #333;
-  color: white;
   text-align: center;
+}
+.footer-link {
+  text-decoration: none;
+  color: white;
+}
+.footer-link.active {
+  color: orange;
+  font-weight: bold;
 }
